Electron -> NW.js

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gmail Wrapper</title>
+    <title>Gmail App</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-  <iframe src="https://gmail.com" style="width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="https://mail.google.com"></iframe>
 </body>
 </html>
